# prkdb

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-simple.yml  docker-compose.yml  verify_remote_admin.sh
.github/: CODEOWNERS
benches/: bench_python.py  (+1 more)
crates/prkdb/: Cargo.toml  README.md
crates/prkdb-cli/: Cargo.toml  README.md
crates/prkdb-cli/src/: collection_metadata.rs  commands.rs  database_manager.rs  main.rs  output.rs  storage_keys.rs  uptime_tracker.rs
crates/prkdb-cli/src/commands/: backup.rs  codegen.rs  collection.rs  consumer.rs  data.rs  database.rs  metrics.rs  partition.rs  replication.rs  schema.rs  serve.rs  subscribe.rs
crates/prkdb-cli/tests/: http_api_integration.rs  websocket_integration.rs
crates/prkdb-client/: Cargo.toml
crates/prkdb-client/src/: client.rs  lib.rs  ws.rs
crates/prkdb-core/: Cargo.toml  README.md
crates/prkdb-core/benches/: async_parallel_wal_bench.rs  batching_bench.rs  mmap_parallel_wal_bench.rs  parallel_wal_bench.rs  replication_bench.rs  wal_bench.rs  wal_random_read_bench.rs  wal_recovery_bench.rs  wal_single_write_bench.rs
crates/prkdb-core/src/: batch_config.rs  buffer_pool.rs  collection.rs  compute.rs  consumer.rs  error.rs  index.rs  lib.rs  storage.rs
crates/prkdb-core/src/batching/: accumulator.rs  adaptive.rs  mod.rs
crates/prkdb-core/src/io/: mmap_io.rs  mod.rs  uring_io.rs
crates/prkdb-core/src/replication/: config.rs  follower_server.rs  manager.rs  mod.rs  protocol.rs  replica_client.rs
crates/prkdb-core/src/serialization/: mod.rs  zerocopy.rs
crates/prkdb-core/src/wal/: adaptive.rs  async_fsync.rs  async_log_segment.rs  async_parallel_wal.rs  buffer_pool.rs  compaction.rs  compression.rs  config.rs  log_record.rs  log_segment.rs  metrics.rs  mmap_log_segment.rs  mmap_parallel_wal.rs  mod.rs  offset_index.rs  parallel_wal.rs  write_ahead_log.rs
crates/prkdb-core/tests/: replication_integration_tests.rs
crates/prkdb-metrics/: Cargo.toml  README.md
crates/prkdb-metrics/src/: exporter.rs  lag_tracker.rs  lib.rs  server.rs  storage.rs
crates/prkdb-orm/: Cargo.toml
crates/prkdb-orm-macros/: Cargo.toml
crates/prkdb-orm-macros/src/: lib.rs
crates/prkdb-orm-macros/tests/: ddl_tests.rs  json_column.rs  nested_json_roundtrip.rs  relations_metadata.rs
crates/prkdb-orm/examples/: postgres_demo.rs  relations.rs  sqlite_demo.rs
crates/prkdb-orm/src/: builders.rs  dialect.rs  executor.rs  lib.rs  schema.rs  sql_gen.rs  types.rs
crates/prkdb-orm/tests/: fetch_api.rs  sqlx_sqlite_driver.rs
crates/prkdb-proto/: Cargo.toml
crates/prkdb-proto/proto/: raft.proto
crates/prkdb-proto/src/: lib.rs
crates/prkdb-schema/: Cargo.toml
crates/prkdb-schema/src/: compatibility.rs  error.rs  lib.rs  registry.rs  storage.rs  types.rs
crates/prkdb-storage-segmented/: Cargo.toml
crates/prkdb-storage-segmented/benches/: throughput.rs
crates/prkdb-storage-segmented/examples/: basic_usage.rs
crates/prkdb-storage-segmented/src/: lib.rs  uring.rs
crates/prkdb-storage-sled/: Cargo.toml
crates/prkdb-storage-sled/src/: lib.rs
crates/prkdb-storage-sql/: Cargo.toml
crates/prkdb-storage-sql/src/: lib.rs
crates/prkdb-types/: Cargo.toml
crates/prkdb-types/src/: collection.rs  consumer.rs  error.rs  index.rs  lib.rs  replication.rs  schema.rs  snapshot.rs  storage.rs
crates/prkdb/benches/: append_log_bench.rs  batch_bench.rs  batching_window_bench.rs  consumer_bench.rs  e2e_throughput_bench.rs  joins_bench.rs  kv_bench.rs  partitioning_bench.rs  query_bench.rs  raft_bench.rs  replication_bench.rs  storage_bench.rs  streaming_bench.rs  windowing_bench.rs
crates/prkdb/examples/: basic_consumer.rs  chaos_test.rs  comprehensive_bench.rs  consumer_group.rs  ecommerce_scenario.rs  index_example.rs  kafka_comparison.rs  metrics_server.rs  orm_integration.rs  partition_metrics.rs  partitioned_bench.rs  raft_cluster.rs  raft_node.rs  raw_wal_bench.rs  replication.rs  streaming_bench.rs  streaming_example.rs  throughput_bench.rs  transaction_example.rs  ttl_example.rs  ultra_performance.rs  write_throughput_bench.rs
crates/prkdb/proto/: raft.proto
crates/prkdb/src/: batch_accumulator.rs  builder.rs  cache.rs  client.rs  collection_handle.rs  compute.rs  consumer.rs  dashboard.rs  db.rs  dlq.rs  error.rs  indexed_storage.rs  joins.rs  lib.rs  metrics.rs  outbox.rs  partitioning.rs  pipeline.rs  prometheus_metrics.rs  rate_limit.rs  replication.rs  retention.rs  scheduler.rs  storage_old_inmemory.rs  streaming.rs  transaction.rs  ttl.rs  windowing.rs
crates/prkdb/src/observability/: mod.rs
crates/prkdb/src/raft/: batch_config.rs  command.rs  config.rs  grpc_service.rs  mod.rs  node.rs  partition_manager.rs  partitioner.rs  proposal_loop.rs  range_partitioner.rs  router.rs  rpc_client.rs  server.rs  service.rs  state_machine.rs
crates/prkdb/src/storage/: cache.rs  checkpoint.rs  collection_partitioned_adapter.rs  config.rs  mod.rs  partitioned_streaming_adapter.rs  recovery.rs  sharded_wal_adapter.rs  snapshot.rs  streaming_adapter.rs  wal_adapter.rs  write_queue.rs
crates/prkdb/tests/: adapter_matrix.rs  admin_rpc_tests.rs  atomic_outbox_tests.rs  batching_window_perf_test.rs  chaos_tests.rs  client_server_integration.rs  compaction_test.rs  consumer_tests.rs  corruption_tests.rs  custom_adapter.rs  delete_test.rs  distributed_writes.rs  dlq_retry_tests.rs  dlq_tests.rs  dynamic_rebalancing_tests.rs  e2e_showcase_tests.rs  extended_chaos_tests.rs  indexed_db_tests.rs  integration_tests.rs  jepsen_consistency_tests.rs  joins_tests.rs  legendary_performance_integration.rs  load_test_utils.rs  load_tests.rs  metrics_tests.rs  orm_relations_integration.rs  outbox_cdc_tests.rs  partitioning_tests.rs  pipeline_sqlite_segmented.rs  pipeline_sqlite_sled.rs  pipeline_tests.rs  prkdb_orm_macro.rs  property_tests.rs  raft_chaos_tests.rs  read_index_test.rs  replication_tests.rs  scan_tests.rs  scheduler_doc_test.rs  schema_tests.rs  security_tests.rs  (+6 more)
crates/prkdb/tests/helpers/: jepsen_checker.rs  leader_redirect.rs  mod.rs  network_simulator.rs  test_cluster.rs
(+107 files in other folders)
