[workspace]
resolver = "2"
members = [
    "crates/prkdb",
    "crates/prkdb-cli",
    "crates/prkdb-client",
    "crates/prkdb-core",
    "crates/prkdb-macros",
    "crates/prkdb-metrics",
    "crates/prkdb-orm",
    "crates/prkdb-orm-macros",
    "crates/prkdb-proto",
    "crates/prkdb-storage-sled",
    "crates/prkdb-storage-sql",
    "crates/prkdb-storage-segmented",
    "crates/prkdb-types",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/prk-Jr/prkdb"
authors = ["prk-Jr"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.88"
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde", "alloc"] }
tracing = "0.1"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }
dashmap = "5.5"
uuid = { version = "1.11", features = ["v4"] }
prometheus = "0.13"
axum = "0.8.8"
lazy_static = "1.5"
crossbeam = "0.8"
mimalloc = { version = "0.1", default-features = false }
lz4 = "1.24"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
clap = { version = "4.5", features = ["derive", "color", "env"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
] }
flate2 = "1.0"
tar = "0.4"

prkdb-types = { path = "crates/prkdb-types" }
prkdb-proto = { path = "crates/prkdb-proto" }
prkdb-client = { path = "crates/prkdb-client" }
prkdb = { path = "crates/prkdb" }
prkdb-core = { path = "crates/prkdb-core" }
prkdb-macros = { path = "crates/prkdb-macros" }
prkdb-metrics = { path = "crates/prkdb-metrics" }
prkdb-orm-macros = { path = "crates/prkdb-orm-macros" }
prkdb-orm = { path = "crates/prkdb-orm" }
prkdb-storage-sled = { path = "crates/prkdb-storage-sled" }
prkdb-storage-sql = { path = "crates/prkdb-storage-sql" }
prkdb-storage-segmented = { path = "crates/prkdb-storage-segmented" }

# Optimize for CI to avoid Linker OOM (Bus Error signal 7)
# Reduces debug info for dependencies in dev/test builds
[profile.dev.package."*"]
debug = 0

[profile.test.package."*"]
debug = 0
