[package]
name = "prkdb-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for PrkDB management and monitoring"
authors = ["PrkDB Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "prkdb"
path = "src/main.rs"

[dependencies]
prkdb = { path = "../prkdb" }
prkdb-core = { path = "../prkdb-core" }
prkdb-storage-sled = { path = "../prkdb-storage-sled" }

# CLI framework
clap = { version = "4.0", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }

# HTTP server (for serve command)
axum = { version = "0.7", features = ["ws", "json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"

# Output formatting
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.15"
colored = "2.0"
bincode = "1.3"

# Utilities
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
humantime = "2.1"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"
