[package]
name = "prkdb-cli"
version = "0.6.0"
edition = "2021"
description = "Command-line interface for PrkDB management and monitoring"
authors = ["PrkDB Team"]
license = "Apache-2.0"

[[bin]]
name = "prkdb-cli"
path = "src/main.rs"

[[bin]]
name = "prkdb-server"
path = "src/main.rs"

[dependencies]
prkdb = { path = "../prkdb" }
prkdb-types = { path = "../prkdb-types" }
prkdb-core = { path = "../prkdb-core" }
prkdb-client = { path = "../prkdb-client" }
prkdb-storage-sled = { path = "../prkdb-storage-sled" }

# CLI framework
clap = { workspace = true, features = ["derive", "color", "env"] }
tokio = { workspace = true }

# HTTP server (for serve command)
axum = { workspace = true, features = ["ws", "json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"
tonic = { workspace = true, features = ["transport"] }

# Output formatting
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tabled = "0.15"
colored = "2.0"
bincode = { workspace = true }

# Utilities
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
humantime = "2.1"
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prost.workspace = true
prost-types.workspace = true
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
rand = "0.8"
