[package]
name = "prkdb-client"
version = "0.6.0"
edition = "2021"
description = "Lightweight client library for PrkDB - smart client with automatic routing and failover"
license = "MIT OR Apache-2.0"

[dependencies]
# Use prkdb-proto for gRPC definitions
prkdb-proto = { workspace = true }

# Core dependencies - minimal set for client
anyhow = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["transport", "channel"] }
tracing = { workspace = true }
seahash = "4.1.0"
futures = "0.3"
tokio-stream = "0.1"

# WebSocket support
tokio-tungstenite = "0.24"
url = "2.5"
serde = { workspace = true }
serde_json = { workspace = true }
async-stream = "0.3"
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
