[package]
name = "prkdb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1" # Updated from workspace = true
serde = { version = "1.0", features = ["derive"] } # Updated from workspace = true
thiserror = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
bincode = "2.0.0-rc.3" # TODO: Remove after rkyv migration complete
rkyv = { version = "0.7", default-features = false, features = ["size_64", "std", "validation"] } # Phase 5.5: Zero-copy serialization
chrono = "0.4" # Added
zerocopy = { version = "0.7", features = ["derive"] } # Zero-copy serialization

# Compression libraries for Phase 1
lz4 = "1.24"              # Fast compression (primary choice)
snap = "1.1"              # Snappy compression (alternative)
zstd = "0.13"             # High compression ratio option
crc32fast = "1.3"         # Fast CRC32 checksums

# Async runtime and networking for Phase 2
tokio = { version = "1.0", features = ["net", "io-util", "time", "sync", "rt", "macros", "fs"] }
futures = "0.3"
tracing = "0.1"
memmap2 = "0.9.9"

# Metrics and HTTP server (for examples)
prometheus = { version = "0.13", optional = true }
axum = { version = "0.7", optional = true }
lazy_static = { version = "1.4", optional = true }

[features]
metrics = ["prometheus", "axum", "lazy_static"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
tempfile = "3"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "wal_bench"
harness = false

[[bench]]
name = "replication_bench"
harness = false

[[bench]]
name = "batching_bench"
harness = false

[[bench]]
name = "parallel_wal_bench"
harness = false

[[bench]]
name = "async_parallel_wal_bench"
harness = false

[[bench]]
name = "mmap_parallel_wal_bench"
harness = false


