[package]
name = "prkdb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Foundation types - re-exported for backward compatibility
prkdb-types = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
bincode = { workspace = true } # Removed rc.3, usage standard 2.0.1 from workspace
rkyv = { version = "0.7", default-features = false, features = ["size_64", "std", "validation"] }
chrono = { workspace = true }
zerocopy = { version = "0.7", features = ["derive"] }

# Compression libraries for Phase 1
lz4 = { workspace = true }
snap = "1.1"
zstd = "0.13"
crc32fast = "1.3"

# Async runtime and networking for Phase 2
tokio = { workspace = true, features = ["net", "io-util", "time", "sync", "rt", "macros", "fs"] }
futures = { workspace = true }
tracing = { workspace = true }
memmap2 = "0.9.9"

# Metrics and HTTP server (for examples)
prometheus = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }

[features]
metrics = ["prometheus", "axum", "lazy_static"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"
tempfile = "3"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "wal_bench"
harness = false

[[bench]]
name = "replication_bench"
harness = false

[[bench]]
name = "batching_bench"
harness = false

[[bench]]
name = "parallel_wal_bench"
harness = false

[[bench]]
name = "async_parallel_wal_bench"
harness = false

[[bench]]
name = "mmap_parallel_wal_bench"
harness = false

[[bench]]
name = "wal_recovery_bench"
harness = false


