[package]
name = "prkdb-metrics"
version = "0.6.0"
edition = "2021"

[dependencies]
prkdb-core = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }