[package]
name = "prkdb-orm-macros"
version = "0.1.0"
edition = "2021"
publish = false
description = "Proc-macros for prkdb-orm: derive(Table) etc."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
prkdb-orm = {workspace = true}
itertools = "0.14.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prkdb-orm = { workspace = true }
