[package]
name = "prkdb-orm"
version = "0.6.0"
edition = "2021"
description = "Lightweight type-safe ORM primitives for prkdb. Feature-gated SQL dialects."
license = "Apache-2.0"

[features]
# default to sqlite for a small default dependency set
default = ["sqlite"]
sqlite = ["sqlx", "sqlx/sqlite", "sqlx/runtime-tokio-rustls"]
postgres = ["sqlx", "sqlx/postgres", "sqlx/runtime-tokio-rustls"]
mysql = ["sqlx", "sqlx/mysql", "sqlx/runtime-tokio-rustls"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
once_cell = "1.18"
paste = "1.0"
async-trait = { workspace = true }
# SQL execution is optional; enabled via features above.
sqlx = { workspace = true, optional = true }
# sqlx is intentionally not a hard dependency of the ORM primitives.
# Adapters that execute SQL will pull sqlx with the features they want.
# If you want to use adapters shipped here, enable features and add sqlx in workspace.

[dev-dependencies]
prkdb-orm-macros = { path = "../prkdb-orm-macros" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
