[package]
name = "prkdb-proto"
version = "0.1.0"
edition = "2021"
description = "Protocol buffer definitions for PrkDB - shared between client and server"
license = "MIT OR Apache-2.0"

[dependencies]
# gRPC and protobuf
tonic = { version = "0.10", features = ["transport", "channel"] }
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.10"
