[package]
name = "prkdb-proto"
version = "0.6.0"
edition = "2021"
description = "Protocol buffer definitions for PrkDB - shared between client and server"
license = "Apache-2.0"

[dependencies]
# gRPC and protobuf
tonic = { workspace = true, features = ["transport", "channel"] }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
