[package]
name = "prkdb-storage-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
prkdb-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
