[package]
name = "prkdb-storage-sql"
version = "0.6.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
prkdb-core = { workspace = true }
prkdb-types = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
