[package]
name = "prkdb-types"
version = "0.1.0"
edition = "2021"
description = "Core domain types and traits for PrkDB - the foundation crate with minimal dependencies"
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true, features = ["serde", "derive"] }

# Error handling
thiserror = { workspace = true }

# Async traits (user approved)
async-trait = { workspace = true }

# Utilities
dashmap = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
